--- a/style.css
+++ b/style.css
@@ -3266,7 +3266,7 @@ body{
 	bottom:0;
 	height:2px;
 	width:50px;
-        background:none;
+        background:#ffffff;
 }
 .contact-us .contact-us-form p {
 	font-size: 14px;
